Added data module

--- a/ViewModels/build.gradle
+++ b/ViewModels/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     implementation project(':Models')
+    implementation project(':Data')
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
